<resources>
    <string name="app_name">Sprout</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_title">登录后更精彩</string>
    <string name="login_get_message">请输入密码</string>
    <string name="login_other_fun">其他登录方式</string>
    <string name="login_user_agreement">登录表示您已阅读并同意</string>
    <string name="user_agreement">用户协议</string>
    <string name="privacy_clause">隐私条款</string>
    <string name="login_hint">请输入账号</string>
    <string name="login_num">+86</string>
    <string name="login_resend">重新发送</string>
    <string name="login_inpput_code">登录</string>
    <string name="same_city_punch_clock">开始打卡记录日常把~></string>
    <string name="release_theme"># </string>

</resources>