<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginClick"
            type="com.sprout.ui.fragment.LoginFragment.ProxyClick" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.sprout.app.weight.video.EmptyControlVideo
            android:id="@+id/video_player"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />





        <TextView
            android:id="@+id/txt_regis_btn"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:textColor="@color/white"
            android:background="@color/green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:onClick="@{()->loginClick.register()}"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="12dp"
            android:text="注册" />


        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="80dp"
            android:textColor="@color/white"
            android:id="@+id/txt_login_title"
            android:textSize="26sp"
            android:text="@string/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <EditText
            android:padding="0dp"
            android:gravity="center"
            android:hint="@string/login_hint"
            android:layout_width="0dp"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:textColorHint="#ffffff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textColor="#ffffff"
            android:background="@drawable/shape_login_phone"
            android:id="@+id/edit_login_phone_number"
            app:layout_constraintTop_toBottomOf="@id/txt_login_title"
            android:layout_height="40dp"
            tools:ignore="TextFields" />


        <EditText
            android:padding="0dp"
            android:gravity="center"
            android:hint="@string/login_get_message"
            android:layout_width="0dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:textColorHint="@color/white"
            android:layout_marginEnd="40dp"
            android:background="@drawable/shape_login_phone"
            android:id="@+id/edit_login_psw"
            app:layout_constraintTop_toBottomOf="@id/edit_login_phone_number"
            android:layout_height="40dp"
            android:inputType="textPassword" />


        <TextView
            android:layout_width="160dp"
            android:textSize="13sp"
            android:background="@drawable/shape_login_message"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_login_psw"
            android:layout_marginTop="100dp"
            android:textColor="@color/white"
            android:id="@+id/txt_login_commit_btn"
            android:text="@string/login_inpput_code"
            android:onClick="@{()->loginClick.loginBtnCommit()}"
            android:layout_height="35dp"
            tools:ignore="SmallSp" />





        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/txt_login_title"
            android:text="@string/login_user_agreement"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="60dp"
            android:textSize="11sp"
            android:id="@+id/textView"
            android:layout_height="wrap_content"
            tools:ignore="SmallSp" />


        <TextView
            android:textColor="@color/white2"
            android:textSize="10sp"
            android:text="@string/login_other_fun"
            app:layout_constraintStart_toStartOf="@id/txt_login_title"
            app:layout_constraintBottom_toTopOf="@id/textView"
            android:layout_marginBottom="80dp"
            android:layout_width="wrap_content"
            android:id="@+id/textView2"
            android:layout_height="wrap_content"
            tools:ignore="SmallSp" />

        <ImageView
            app:layout_constraintTop_toTopOf="@id/textView2"
            app:layout_constraintBottom_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="@id/txt_login_title"
            android:layout_width="24dp"
            android:src="@drawable/login_btn_weibo_normal"
            android:id="@+id/image_login_weibo"
            android:layout_height="24dp"/>


        <ImageView
            android:layout_width="24dp"
            app:layout_constraintTop_toTopOf="@id/image_login_weibo"
            app:layout_constraintStart_toEndOf="@id/image_login_weibo"
            android:layout_marginStart="30dp"
            android:id="@+id/image_login_btn_wechat"
            android:src="@drawable/login_btn_wechat_normal"
            android:layout_height="24dp"/>


        <ImageView
            android:layout_width="24dp"
            app:layout_constraintTop_toTopOf="@id/image_login_weibo"
            app:layout_constraintStart_toEndOf="@id/image_login_btn_wechat"
            android:layout_marginStart="30dp"
            android:id="@+id/image_login_btn_qq"
            android:src="@drawable/login_btn_qq_normal"
            android:layout_height="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>